--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,100 @@
-<html>
+<!doctype html>
 
-	<head>
+<!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
+<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
+<!-- the "no-js" class is for Modernizr. -->
 
-	</head>
+<head id="www-sjackson-net" data-template-set="html5-reset">
 
-	<body>
+	<meta charset="utf-8">
+	
+	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	
+	<title>{{ page.title }}</title>
+	
+	<meta name="title" content="">
+	<meta name="description" content="">
+	<meta name="google-site-verification" content="">
+	<!-- Speaking of Google, don't forget to set your site up: http://google.com/webmasters -->
+	
+	<meta name="author" content="Steve Jackson">
+	<meta name="Copyright" content="Copyright Steve Jackson 2011. All Rights Reserved.">
+
+	<!-- Dublin Core Metadata : http://dublincore.org/ -->
+	<meta name="DC.title" content="Project Name">
+	<meta name="DC.subject" content="What you're about.">
+	<meta name="DC.creator" content="Who made this site.">
+	
+	<!--<link rel="shortcut icon" href="_/img/favicon.ico">-->
+		 
+	<!-- CSS: screen, mobile & print are all in the same file -->
+	<link rel="stylesheet" href="/css/htmlreset.css">
+	<link rel="stylesheet" href="/css/layout.css">
+	
+	<!-- all our JS is at the bottom of the page, except for Modernizr. -->
+	<script src="/js/modernizr-1.7.min.js"></script>
+
+</head>
+
+<body>
+
+<div class="wrapper">
+
+	<header>
+		
+		<h1><a href="/">Steve Jackson</a></h1>
+		
+		<nav>
+		
+			<ol>
+				<li><a href="">Nav Link 1</a></li>
+				<li><a href="">Nav Link 2</a></li>
+				<li><a href="">Nav Link 3</a></li>
+			</ol>
+		
+		</nav>
+	
+		<section id='content'>
+	
 		{{ content }}
-	</body>
+		<h1>Article Header</h1>
+		
+		</section>
+	
+	<footer>
+		
+		<p><small>&copy; Copyright Your Name Here 2011. All Rights Reserved.</small></p>
+		
+	</footer>
 
+</div>
+
+<script src="/js/jquery-1.5.1.min.js"></script>
+
+<!-- this is where we put our custom functions -->
+<script src="/js/functions.js"></script>
+
+<!-- Asynchronous google analytics; this is the official snippet.
+	 Replace UA-XXXXXX-XX with your site's ID and uncomment to enable.
+	 
+<script>
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-XXXXXX-XX']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+-->
+  
+</body>
 </html>
