initial nav layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,21 +42,23 @@
 
 <body>
 
-<div class="wrapper">
+<div id="top-bar"></div>
+
+<div id="wrapper">
 
 	<header>
 		
 		<h1><a href="/">Steve Jackson</a></h1>
 		
-		<nav>
+		<div id='nav'>
 		
-			<ol>
+			<ul>
 				<li><a href="">Nav Link 1</a></li>
 				<li><a href="">Nav Link 2</a></li>
 				<li><a href="">Nav Link 3</a></li>
-			</ol>
+			</ul>
 		
-		</nav>
+		</div>
 	
 		<section id='content'>
 	
