--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,22 +1,68 @@
-#nav {
-	background: black;
-	width: 400px;
-	height: 20px;
+$theme-color: #ea0000;
+$site-width: 900px;
+
+#top-bar {
+	width: 100%;
+	height: 9px;
+	background: $theme-color;
 }
 
-a {color: #03f;}
-a:hover {color: #69f;}
+#wrapper {
+	position: relative;
+	width: $site-width;
+	margin: 0 auto;
+}
 
-/* Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
-::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
-::selection {background: #fcd700; color: #fff; text-shadow: none;} 
+#nav {
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	display: block;
 
-/*	j.mp/webkit-tap-highlight-color */
-a:link {-webkit-tap-highlight-color: #fcd700;} 
+	ul {
+		width: 100%;
+		list-style: none;
+		display: block;
+		
+		li {
+			float: left;
+			margin-left: 3px;
+			margin-left: 5px;
+			padding: 8px 15px 8px 15px;
+			background: $theme-color;
+			color: white;
+	
+			&:hover {
+				background: lighten($theme-color, 15%);
+			}
 
-ins {background-color: #fcd700; color: #000; text-decoration: none;}
-mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}
+			a {
+				display: block;
+				text-decoration: none;
+				text-transform: uppercase;
+				color: white;
+			}
+		}
+	}
+}
 
+a {
+	color: $theme-color;
+}
 
+a:hover {
+	text-decoration: underline;
+}
 
+::-moz-selection{background: $theme-color; color: #fff; text-shadow: none;}
+::selection {background: $theme-color; color: #fff; text-shadow: none;} 
+
+a:link {-webkit-tap-highlight-color: $theme-color;} 
+
+ins {background-color: $theme-color; color: #000; text-decoration: none;}
+mark {background-color: $theme-color; color: #000; font-style: italic; font-weight: bold;}
+
+.clear {
+	clear: both;
+}
 
