Added jquery.kwicks plugin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,15 +50,13 @@
 		
 		<h1><a href="/">Steve Jackson</a></h1>
 		
-		<div id='nav'>
 		
-			<ul>
+			<ul class='navsub'>
 				<li><a href="">Nav Link 1</a></li>
 				<li><a href="">Nav Link 2</a></li>
 				<li><a href="">Nav Link 3</a></li>
 			</ul>
 		
-		</div>
 	
 		<section id='content'>
 	
@@ -76,6 +74,7 @@
 </div>
 
 <script src="/js/jquery-1.5.1.min.js"></script>
+<script src="/js/jquery.kwicks.js"></script>
 
 <!-- this is where we put our custom functions -->
 <script src="/js/functions.js"></script>
