--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,22 +48,33 @@
 
 	<header>
 		
-		<h1><a href="/">Steve Jackson</a></h1>
-		
-		
+		<div class="left-split">
+			block text
+		</div>
+
+		<div class="right-split">
+			<h1><a href="">Steve Jackson</a></h1>
+		</div>
+
+		<div class="clear"></div>
+
+		<div class="navwrap">	
 			<ul class='navsub'>
-				<li><a href="">Nav Link 1</a></li>
-				<li><a href="">Nav Link 2</a></li>
-				<li><a href="">Nav Link 3</a></li>
+				<li><div class="navitem"><a href="">Nav Link 1</a></div></li>
+				<li><div class="navitem"><a href="">Nav Link 2</a></div></li>
+				<li><div class="navitem"><a href="">Nav Link 3</a></div></li>
+				<li><div class="navitem"><a href="">Nav Link 3</a></div></li>
+				<li><div class="navitem"><a href="">Nav Link 3</a></div></li>
 			</ul>
-		
-	
-		<section id='content'>
+		</div>	
+	</header>
+
+	<section id='content'>
 	
 		{{ content }}
 		<h1>Article Header</h1>
 		
-		</section>
+	</section>
 	
 	<footer>
 		
@@ -76,8 +87,7 @@
 <script src="/js/jquery-1.5.1.min.js"></script>
 <script src="/js/jquery.kwicks.js"></script>
 
-<!-- this is where we put our custom functions -->
-<script src="/js/functions.js"></script>
+<script src="/js/functions.js" type="text/javascript"></script>
 
 <!-- Asynchronous google analytics; this is the official snippet.
 	 Replace UA-XXXXXX-XX with your site's ID and uncomment to enable.
