--- a/css/layout.css
+++ b/css/layout.css
@@ -1,12 +1,40 @@
+body {
+  background: url("/img/bg.png") repeat-x repeat-y; }
+
 #top-bar {
   width: 100%;
-  height: 9px;
-  background: #ea0000; }
+  height: 8px;
+  background: #cd0a0a; }
 
 #wrapper {
   position: relative;
   width: 900px;
   margin: 0 auto; }
+
+header {
+  border-bottom: 1px solid #ccc;
+  height: 150px; }
+  header .left-split {
+    width: 200px;
+    position: absolute;
+    top: 80px;
+    left: 0; }
+  header .right-split {
+    position: absolute;
+    top: 80px;
+    left: 200px;
+    width: 680px;
+    margin-left: 20px; }
+    header .right-split h1 a {
+      font-size: 18px;
+      color: black; }
+      header .right-split h1 a:hover {
+        color: #cd0a0a; }
+
+.navwrap {
+  position: absolute;
+  top: 0;
+  right: 0; }
 
 .navsub {
   list-style: none;
@@ -14,62 +42,95 @@
   margin: 0;
   padding: 0; }
   .navsub li {
+    background: #cd0a0a;
     display: block;
     overflow: hidden;
     padding: 0;
-    cursor: pointer; }
+    cursor: pointer;
+    float: left;
+    width: 100px;
+    height: 40px;
+    margin-right: 5px; }
 
-#nav {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  display: block; }
-  #nav ul {
+.navitem {
+  width: 100%;
+  height: 100%;
+  margin-top: 10px;
+  text-align: center; }
+  .navitem a {
+    display: block;
     width: 100%;
-    list-style: none;
-    display: block; }
-    #nav ul li {
-      float: left;
-      margin-left: 3px;
-      margin-left: 5px;
-      padding: 8px 15px 8px 15px;
-      background: #ea0000;
-      color: white; }
-      #nav ul li:hover {
-        background: #ff3838; }
-      #nav ul li a {
-        display: block;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: white; }
+    height: 100%;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: bold; }
+
+/*
+#nav {
+position: absolute;
+right: 0px;
+top: 0px;
+display: block;
+
+ul {
+width: 100%;
+list-style: none;
+display: block;
+
+li {
+float: left;
+margin-left: 3px;
+margin-left: 5px;
+padding: 8px 15px 8px 15px;
+background: $theme-color;
+color: white;
+
+&:hover {
+background: lighten($theme-color, 15%);
+		}
+
+						a {
+						display: block;
+						text-decoration: none;
+						text-transform: uppercase;
+						color: white;
+		}
+	}
+}
+}
+ */
+section#content {
+  padding: 20px; }
 
 a {
-  color: #ea0000;
+  color: #cd0a0a;
   text-decoration: none; }
 
 a:hover {
   text-decoration: underline; }
 
 ::-moz-selection {
-  background: #ea0000;
+  background: #cd0a0a;
   color: #fff;
   text-shadow: none; }
 
 ::selection {
-  background: #ea0000;
+  background: #cd0a0a;
   color: #fff;
   text-shadow: none; }
 
 a:link {
-  -webkit-tap-highlight-color: #ea0000; }
+  -webkit-tap-highlight-color: #cd0a0a; }
 
 ins {
-  background-color: #ea0000;
+  background-color: #cd0a0a;
   color: #000;
   text-decoration: none; }
 
 mark {
-  background-color: #ea0000;
+  background-color: #cd0a0a;
   color: #000;
   font-style: italic;
   font-weight: bold; }
