--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,72 +1,138 @@
-$theme-color: #ea0000;
+$theme-color: #cd0a0a;
 $site-width: 900px;
 
+body {
+				background: url('/img/bg.png') repeat-x repeat-y;
+}
+
 #top-bar {
-	width: 100%;
-	height: 9px;
-	background: $theme-color;
+				width: 100%;
+				height: 8px;
+				background: $theme-color;
 }
 
 #wrapper {
-	position: relative;
-	width: $site-width;
-	margin: 0 auto;
+				position: relative;
+				width: $site-width;
+				margin: 0 auto;
 }
 
-.navsub {
-	list-style: none;
-	position: relative;
-	margin: 0;
-	padding: 0;
-	
-	li {
-		display: block;
-		overflow: hidden;
-		padding: 0;
-		cursor: pointer;
+header {
+	border-bottom: 1px solid #ccc;
+	height: 150px;
+
+	.left-split {
+		width: 200px;
+		position: absolute;
+		top: 80px;
+		left: 0;
 	}
-}
+	.right-split {
+		position: absolute;
+		top: 80px;
+		left: 200px;
+		width: $site-width - 200px - 20px;
+		margin-left: 20px;
 
-#nav {
-	position: absolute;
-	right: 0px;
-	top: 0px;
-	display: block;
+		h1 a {
+			font-size: 18px;
+			color: black;
 
-	ul {
-		width: 100%;
-		list-style: none;
-		display: block;
-		
-		li {
-			float: left;
-			margin-left: 3px;
-			margin-left: 5px;
-			padding: 8px 15px 8px 15px;
-			background: $theme-color;
-			color: white;
-	
 			&:hover {
-				background: lighten($theme-color, 15%);
-			}
-
-			a {
-				display: block;
-				text-decoration: none;
-				text-transform: uppercase;
-				color: white;
+				color: $theme-color;
 			}
 		}
 	}
 }
 
+.navwrap {
+				position: absolute;
+				top: 0;
+				right: 0;
+}
+
+.navsub {
+				list-style: none;
+				position: relative;
+				margin: 0;
+				padding: 0;
+
+				li {
+								background: $theme-color;
+								display: block;
+								overflow: hidden;
+								padding: 0;
+								cursor: pointer;
+								float: left;
+								width: 100px;
+								height: 40px;
+								margin-right: 5px;
+}
+}
+
+.navitem {
+				width: 100%;
+				height: 100%;
+				margin-top: 10px;
+				text-align: center;
+				a {
+								display: block;
+								width: 100%;
+								height: 100%;
+								color: white;
+								text-decoration: none;
+								text-transform: uppercase;
+								font-size: 13px;
+								font-weight: bold;
+	}
+}
+
+/*
+#nav {
+position: absolute;
+right: 0px;
+top: 0px;
+display: block;
+
+ul {
+width: 100%;
+list-style: none;
+display: block;
+
+li {
+float: left;
+margin-left: 3px;
+margin-left: 5px;
+padding: 8px 15px 8px 15px;
+background: $theme-color;
+color: white;
+
+&:hover {
+background: lighten($theme-color, 15%);
+		}
+
+						a {
+						display: block;
+						text-decoration: none;
+						text-transform: uppercase;
+						color: white;
+		}
+	}
+}
+}
+ */
+
+section#content {
+	padding: 20px;
+}
+
 a {
-	color: $theme-color;
-	text-decoration: none;
+				color: $theme-color;
+				text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+				text-decoration: underline;
 }
 
 ::-moz-selection{background: $theme-color; color: #fff; text-shadow: none;}
@@ -78,6 +144,6 @@ ins {background-color: $theme-color; color: #000; text-decoration: none;}
 mark {background-color: $theme-color; color: #000; font-style: italic; font-weight: bold;}
 
 .clear {
-	clear: both;
+				clear: both;
 }
 
