--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,9 @@
 	<header>
 		
 		<div class="left-split">
-			block text
+			<div id="box" class="opaque">
+				<span>sjj</span>
+			</div>
 		</div>
 
 		<div class="right-split">
