--- a/css/layout.scss
+++ b/css/layout.scss
@@ -2,9 +2,10 @@ $theme-color: #cd0a0a;
 $site-width: 900px;
 
 body {
-				background: url('/img/bg.png') repeat-x repeat-y;
-}
+				background-image: url('/img/bg2.png');
 
+				background-repeat: repeat-x repeat-y;
+}
 #top-bar {
 				width: 100%;
 				height: 8px;
@@ -43,6 +44,28 @@ header {
 			}
 		}
 	}
+}
+
+#box {
+	float: right;
+	width: 50px;
+	height: 50px;
+	background: $theme-color;
+
+	span {
+		width: 100%;
+		height: 100%;
+		text-align: center;
+		color: white;
+		font-weight: bold;
+		padding-top: 15px;
+	}
+}
+
+.opaque {
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+	filter: alpha(opacity=50);
+	opacity: .5;
 }
 
 .navwrap {
