--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,16 @@
 	<header>
 		
 		<div class="left-split">
+			<div id="boxcontainer">
 			<div id="box" class="opaque">
 				<span>sjj</span>
+			</div>
 			</div>
 		</div>
 
 		<div class="right-split">
 			<h1><a href="">Steve Jackson</a></h1>
+			<span>Ruby, Rails, Vim, and various other musings</span>
 		</div>
 
 		<div class="clear"></div>
