--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/img/bg2.png");
+  background-image: url("/img/bg3.png");
   background-repeat: repeat-x repeat-y; }
 
 #top-bar {
@@ -26,11 +26,20 @@ header {
     left: 200px;
     width: 680px;
     margin-left: 20px; }
+    header .right-split span {
+      position: absolute;
+      left: 0;
+      top: 30px; }
     header .right-split h1 a {
       font-size: 18px;
       color: black; }
       header .right-split h1 a:hover {
         color: #cd0a0a; }
+
+#boxcontainer {
+  width: 100%;
+  height: 50px;
+  padding-left: 1px; }
 
 #box {
   float: right;
@@ -86,40 +95,6 @@ header {
     font-size: 13px;
     font-weight: bold; }
 
-/*
-#nav {
-position: absolute;
-right: 0px;
-top: 0px;
-display: block;
-
-ul {
-width: 100%;
-list-style: none;
-display: block;
-
-li {
-float: left;
-margin-left: 3px;
-margin-left: 5px;
-padding: 8px 15px 8px 15px;
-background: $theme-color;
-color: white;
-
-&:hover {
-background: lighten($theme-color, 15%);
-		}
-
-						a {
-						display: block;
-						text-decoration: none;
-						text-transform: uppercase;
-						color: white;
-		}
-	}
-}
-}
- */
 section#content {
   padding: 20px; }
 
