--- a/css/layout.scss
+++ b/css/layout.scss
@@ -2,10 +2,11 @@ $theme-color: #cd0a0a;
 $site-width: 900px;
 
 body {
-				background-image: url('/img/bg2.png');
-
-				background-repeat: repeat-x repeat-y;
+	background-image: url('/img/bg3.png');
+	background-repeat: repeat-x repeat-y;
+	//background: #fcfcfc;
 }
+
 #top-bar {
 				width: 100%;
 				height: 8px;
@@ -35,6 +36,12 @@ header {
 		width: $site-width - 200px - 20px;
 		margin-left: 20px;
 
+		span {
+			position: absolute;
+			left: 0;
+			top: 30px;
+		}
+
 		h1 a {
 			font-size: 18px;
 			color: black;
@@ -44,6 +51,12 @@ header {
 			}
 		}
 	}
+}
+
+#boxcontainer {
+	width: 100%;
+	height: 50px;
+	padding-left: 1px;
 }
 
 #box {
@@ -109,41 +122,6 @@ header {
 								font-weight: bold;
 	}
 }
-
-/*
-#nav {
-position: absolute;
-right: 0px;
-top: 0px;
-display: block;
-
-ul {
-width: 100%;
-list-style: none;
-display: block;
-
-li {
-float: left;
-margin-left: 3px;
-margin-left: 5px;
-padding: 8px 15px 8px 15px;
-background: $theme-color;
-color: white;
-
-&:hover {
-background: lighten($theme-color, 15%);
-		}
-
-						a {
-						display: block;
-						text-decoration: none;
-						text-transform: uppercase;
-						color: white;
-		}
-	}
-}
-}
- */
 
 section#content {
 	padding: 20px;
