--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,8 @@
 body {
-  background-image: url("/img/bg3.png");
   background-repeat: repeat-x repeat-y; }
+
+p {
+  margin-bottom: 1em; }
 
 #top-bar {
   width: 100%;
@@ -13,7 +15,8 @@ body {
   margin: 0 auto; }
 
 header {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 2px solid #b6b6b6;
+  margin-bottom: 25px;
   height: 150px; }
   header .left-split {
     width: 200px;
@@ -95,8 +98,37 @@ header {
     font-size: 13px;
     font-weight: bold; }
 
-section#content {
-  padding: 20px; }
+/* post layout code */
+#content {
+  width: 900px; }
+  #content .blog-post {
+    border-bottom: 2px solid #b6b6b6;
+    padding-top: 20px;
+    padding-bottom: 40px; }
+  #content .left-split {
+    float: left;
+    width: 200px;
+    text-align: right;
+    padding-right: 20px;
+    color: #7a7a7a; }
+    #content .left-split #date {
+      border-right: 1px solid #b6b6b6;
+      float: right;
+      padding: 5px 5px 4px 0;
+      margin-top: 10px;
+      margin-right: 0; }
+  #content .right-split {
+    float: left;
+    width: 680px; }
+  #content h1 a {
+    color: black;
+    font-size: 24px; }
+    #content h1 a:hover {
+      color: #cd0a0a; }
+
+/********************/
+footer {
+  margin-top: 20px; }
 
 a {
   color: #cd0a0a;
