--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,8 @@
 	
 	<!-- all our JS is at the bottom of the page, except for Modernizr. -->
 	<script src="/js/modernizr-1.7.min.js"></script>
-
+        <script type="text/javascript" src="http://use.typekit.com/nnc7pcl.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 
 <body>
