--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,6 +91,7 @@
 
 <script src="/js/jquery-1.5.1.min.js"></script>
 <script src="/js/jquery.kwicks.js"></script>
+<script src="/js/jquery.color.min.js"></script>
 
 <script src="/js/functions.js" type="text/javascript"></script>
 
