--- a/css/layout.css
+++ b/css/layout.css
@@ -15,8 +15,10 @@ div, body, p, span {
 
 #top-bar {
   width: 100%;
-  height: 8px;
-  background: #cd0a0a; }
+  height: 6px;
+  background: #cd0a0a;
+  border-bottom: 3px solid #840606;
+  z-index: -1; }
 
 #wrapper {
   position: relative;
@@ -28,21 +30,24 @@ header {
   margin-bottom: 25px;
   height: 150px; }
   header .left-split {
-    width: 200px;
+    width: 175px;
     position: absolute;
     top: 80px;
     left: 0; }
   header .right-split {
     position: absolute;
     top: 80px;
-    left: 200px;
-    width: 740px;
+    left: 175px;
+    width: 765px;
     margin-left: 20px; }
     header .right-split span {
       position: absolute;
       left: 0;
       top: 30px; }
     header .right-split h1 a {
+      position: absolute;
+      left: 0;
+      top: 5px;
       font-size: 18px;
       color: black; }
       header .right-split h1 a:hover {
@@ -57,8 +62,10 @@ header {
   float: right;
   width: 50px;
   height: 50px;
-  background: #cd0a0a; }
+  background: #cd0a0a;
+  border: 3px solid #840606; }
   #box span {
+    display: block;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -73,7 +80,7 @@ header {
 
 .navwrap {
   position: absolute;
-  top: 0;
+  top: -3px;
   right: 0; }
 
 .navsub {
@@ -90,7 +97,10 @@ header {
     float: left;
     width: 100px;
     height: 40px;
-    margin-right: 5px; }
+    margin-right: 5px;
+    border-bottom: 3px solid #840606;
+    border-left: 3px solid #840606;
+    border-right: 3px solid #840606; }
 
 .navitem {
   width: 100%;
@@ -116,7 +126,7 @@ header {
     padding-bottom: 40px; }
   #content .left-split {
     float: left;
-    width: 200px;
+    width: 175px;
     text-align: right;
     padding-right: 20px;
     color: #7a7a7a; }
@@ -128,7 +138,7 @@ header {
       margin-right: 0; }
   #content .right-split {
     float: left;
-    width: 740px; }
+    width: 765px; }
   #content h1 a {
     color: black;
     font-size: 24px; }
