date padding changes

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,6 @@
 body {
   background-repeat: repeat-x repeat-y;
+  background: #f1f1f1;
   font-family: proxima-nova, sans-serif; }
 
 p {
@@ -132,8 +133,9 @@ header {
     color: #7a7a7a; }
     #content .left-split #date {
       border-right: 1px solid #b6b6b6;
+      font-size: 14px;
       float: right;
-      padding: 5px 5px 4px 0;
+      padding: 5px 15px 9px 0;
       margin-top: 10px;
       margin-right: 0; }
   #content .right-split {
