--- a/css/layout.scss
+++ b/css/layout.scss
@@ -6,6 +6,7 @@ $base-font-color: #333;
 body {
   //  background-image: url('/img/bg3.png');
   background-repeat: repeat-x repeat-y;
+  background: #f1f1f1;
   //background: #fcfcfc;
   font-family: proxima-nova, sans-serif;
 }
@@ -176,8 +177,9 @@ header {
 
     #date {
       border-right: 1px solid $hr-color;
+      font-size: 14px;
       float: right;
-      padding: 5px 5px 4px 0;
+      padding: 5px 15px 9px 0;
       margin-top: 10px;
       margin-right: 0;
     }
