added social media icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,13 +29,9 @@
 	<meta name="DC.subject" content="What you're about.">
 	<meta name="DC.creator" content="Who made this site.">
 	
-	<!--<link rel="shortcut icon" href="_/img/favicon.ico">-->
-		 
-	<!-- CSS: screen, mobile & print are all in the same file -->
 	<link rel="stylesheet" href="/css/htmlreset.css">
 	<link rel="stylesheet" href="/css/layout.css">
 	
-	<!-- all our JS is at the bottom of the page, except for Modernizr. -->
 	<script src="/js/modernizr-1.7.min.js"></script>
         <script type="text/javascript" src="http://use.typekit.com/nnc7pcl.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -60,17 +56,26 @@
 		<div class="right-split">
 			<h1><a href="">Steve Jackson</a></h1>
 			<span>Ruby, Rails, Vim, and various other musings</span>
+
+                    <div class="icons">
+                      <ul>
+                        <li><div class="iconcontainer"><a class="github" href="http://www.github.com/stevejackson"></a></div></li>
+                        <li><div class="iconcontainer"><a class="linkedin" href="http://www.linkedin.com/in/sjackson7"></a></div></li>
+                        <li><div class="iconcontainer"><a class="googleplus" href="https://profiles.google.com/114700593139486212398"></a></div></li>
+                        <li><div class="iconcontainer"><a class="twitter" href="http://www.twitter.com/_sjackson"></a></div></li>
+                      </ul>
+                    </div>
+
 		</div>
 
 		<div class="clear"></div>
 
 		<div class="navwrap">	
 			<ul class='navsub'>
-				<li><div class="navitem"><a href="">Nav Link 1</a></div></li>
-				<li><div class="navitem"><a href="">Nav Link 2</a></div></li>
-				<li><div class="navitem"><a href="">Nav Link 3</a></div></li>
-				<li><div class="navitem"><a href="">Nav Link 3</a></div></li>
-				<li><div class="navitem"><a href="">Nav Link 3</a></div></li>
+				<li><div class="navitem"><a href="">Home</a></div></li>
+				<li><div class="navitem"><a href="">Blog</a></div></li>
+				<li><div class="navitem"><a href="">Portfolio</a></div></li>
+				<li><div class="navitem"><a href="">About</a></div></li>
 			</ul>
 		</div>	
 	</header>
