--- a/css/layout.css
+++ b/css/layout.css
@@ -40,7 +40,8 @@ header {
     top: 80px;
     left: 175px;
     width: 765px;
-    margin-left: 20px; }
+    margin-left: 20px;
+    height: 50px; }
     header .right-split span {
       position: absolute;
       left: 0;
@@ -53,6 +54,49 @@ header {
       color: black; }
       header .right-split h1 a:hover {
         color: #cd0a0a; }
+    header .right-split .icons {
+      position: absolute;
+      right: 0;
+      top: 0; }
+      header .right-split .icons ul {
+        list-style: none;
+        position: relative; }
+        header .right-split .icons ul li {
+          display: block;
+          width: 48px;
+          height: 48px;
+          margin-left: 10px;
+          overflow: hidden;
+          cursor: pointer;
+          float: left; }
+          header .right-split .icons ul li a {
+            display: block;
+            width: 100%;
+            height: 100%; }
+
+.iconcontainer {
+  position: relative;
+  top: -50px;
+  width: 100%;
+  height: 100%; }
+
+.github {
+  background: url("/img/icons/github.png"); }
+
+.linkedin {
+  background: url("/img/icons/linkedin-48x48.png"); }
+
+.skype {
+  background: url("/img/icons/skype-48x48.png"); }
+
+.meetup {
+  background: url("/img/icons/meetup-48x48.png"); }
+
+.twitter {
+  background: url("/img/icons/twitter-48x48.png"); }
+
+.googleplus {
+  background: url("/img/icons/g-plus-icon-48x48.png"); }
 
 #boxcontainer {
   width: 100%;
@@ -106,7 +150,7 @@ header {
 .navitem {
   width: 100%;
   height: 100%;
-  margin-top: 10px;
+  margin-top: 13px;
   text-align: center; }
   .navitem a {
     display: block;
