footer & gitignore modification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
 	
 	<footer>
 		
-		<p><small>&copy; Copyright Your Name Here 2011. All Rights Reserved.</small></p>
+		<p><small>&copy; Copyright Steve Jackson 2011. All Rights Reserved.</small></p>
 		
 	</footer>
 
