--- a/css/layout.scss
+++ b/css/layout.scss
@@ -225,7 +225,7 @@ header {
 
     color: #7a7a7a;
 
-    #date {
+    .date {
       border-right: 1px solid $hr-color;
       font-size: 14px;
       float: right;
