--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,9 +47,9 @@
 		
 		<div class="left-split">
 			<div id="boxcontainer">
-			<div id="box" class="opaque">
+                          <a href="/index.html"><div id="box">
 				<span>sjj</span>
-			</div>
+                            </div></a>
 			</div>
 		</div>
 
@@ -72,10 +72,10 @@
 
 		<div class="navwrap">	
 			<ul class='navsub'>
-				<li><div class="navitem"><a href="">Home</a></div></li>
-				<li><div class="navitem"><a href="">Blog</a></div></li>
-				<li><div class="navitem"><a href="">Portfolio</a></div></li>
-				<li><div class="navitem"><a href="">About</a></div></li>
+				<li><div class="navitem"><a href="/index.html">Home</a></div></li>
+				<li><div class="navitem"><a href="/blog.html">Blog</a></div></li>
+				<li><div class="navitem"><a href="/portfolio.html">Portfolio</a></div></li>
+				<li><div class="navitem"><a href="/about.html">About</a></div></li>
 			</ul>
 		</div>	
 	</header>
@@ -96,7 +96,7 @@
 
 <script src="/js/jquery-1.5.1.min.js"></script>
 <script src="/js/jquery.kwicks.js"></script>
-
+<script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" type="text/javascript"></script>
 <script src="/js/functions.js" type="text/javascript"></script>
 
 <!-- Asynchronous google analytics; this is the official snippet.
