--- a/css/layout.scss
+++ b/css/layout.scss
@@ -46,7 +46,7 @@ header {
   height: 150px;
 
   .left-split {
-    width: 175px;
+    width: 125px;
     position: absolute;
     top: 80px;
     left: 0;
@@ -54,8 +54,8 @@ header {
   .right-split {
     position: absolute;
     top: 80px;
-    left: 175px;
-    width: $site-width - 175px - 20px;
+    left: 125px;
+    width: $site-width - 125px - 20px;
     margin-left: 20px;
     height: 50px;
 
@@ -135,9 +135,10 @@ header {
 
 #box {
   float: right;
-  width: 50px;
+  width: 95%;
   height: 50px;
   background: $theme-color;
+  cursor: pointer;
 
   border: 3px solid darken($theme-color, 15%);
 
@@ -218,7 +219,7 @@ header {
 
   .left-split {
     float: left;
-    width: 175px;
+    width: 125px;
 
     text-align: right;
     padding-right: 20px;
@@ -237,8 +238,11 @@ header {
 
   .right-split {
     float: left;
-    width: $site-width - 175px - 20px;
+    width: $site-width - 225px - 15px - 125px - 20px;
+    margin-right: 15px;
   }
+
+
 
   h1 a {
     color: black;
@@ -251,6 +255,23 @@ header {
       color: $theme-color;
     }
   }
+}
+
+.left-column {
+  float: left;
+  width: $site-width - 225px;
+}
+
+.right-column {
+    float: left;
+    width: 225px;
+    margin-top: 30px;
+
+    #tweet {
+      background: #f5f5f5;
+      border: 3px solid darken(#f5f5f5, 10%);
+      padding: 10px;
+    }
 }
 
 article a {
