Syntax highlighting. Added twitter button. Changed tweet query. Widened layout size.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,9 @@
 	<meta name="DC.subject" content="What you're about.">
 	<meta name="DC.creator" content="Who made this site.">
 	
-	<link rel="stylesheet" href="/css/htmlreset.css">
-	<link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/htmlreset.css">
+        <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/syntax.css">
 	
 	<script src="/js/modernizr-1.7.min.js"></script>
         <script type="text/javascript" src="http://use.typekit.com/nnc7pcl.js"></script>
