--- a/css/layout.css
+++ b/css/layout.css
@@ -24,7 +24,7 @@ div, body, p, span {
 
 #wrapper {
   position: relative;
-  width: 960px;
+  width: 985px;
   margin: 0 auto; }
 
 header {
@@ -40,7 +40,7 @@ header {
     position: absolute;
     top: 80px;
     left: 125px;
-    width: 815px;
+    width: 840px;
     margin-left: 20px;
     height: 50px; }
     header .right-split span {
@@ -160,7 +160,7 @@ header {
 
 /* post layout code */
 #content {
-  width: 960px; }
+  width: 985px; }
   #content .blog-post {
     border-bottom: 2px solid #b6b6b6;
     padding-top: 20px;
@@ -180,8 +180,8 @@ header {
       margin-right: 0; }
   #content .right-split {
     float: left;
-    width: 575px;
-    margin-right: 15px; }
+    width: 565px;
+    margin-right: 25px; }
   #content h1 a {
     color: black;
     font-weight: 300;
@@ -197,12 +197,14 @@ header {
 
 .right-column {
   float: left;
-  width: 225px;
+  width: 250px;
   margin-top: 30px; }
   .right-column #tweet {
     background: #f5f5f5;
     border: 3px solid #dcdcdc;
     padding: 10px; }
+  .right-column .twitterbutton {
+    text-align: center; }
 
 article a {
   border-bottom: 1px dotted #cd0a0a; }
@@ -246,3 +248,6 @@ mark {
 
 .clear {
   clear: both; }
+
+pre {
+  white-space: pre-wrap; }
