Started footer layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,14 +86,14 @@
 		{{ content }}
 		
 	</section>
-	
-	<footer>
-		
-		<p><small>&copy; Copyright Steve Jackson 2011. All Rights Reserved.</small></p>
-		
-	</footer>
-
 </div>
+
+
+<footer>
+<div id="footercontent">
+  <p><small>&copy; Copyright Steve Jackson 2011. All Rights Reserved.</small></p>
+</div>
+</footer>
 
 <script src="/js/jquery-1.5.1.min.js"></script>
 <script src="/js/jquery.kwicks.js"></script>
