--- a/css/layout.scss
+++ b/css/layout.scss
@@ -103,7 +103,7 @@ header {
         }
       }
     }
-
+    
   }
 }
 
@@ -263,23 +263,23 @@ header {
 }
 
 .right-column {
-  float: left;
-  width: 250px;
-  margin-top: 30px;
+    float: left;
+    width: 250px;
+    margin-top: 30px;
 
-  #tweet {
-    background: #f5f5f5;
-    border: 3px solid darken(#f5f5f5, 10%);
-    padding: 10px;
-  }
-  .twitterbutton {
-    text-align: center;
-  }
+    #tweet {
+      background: #f5f5f5;
+      border: 3px solid darken(#f5f5f5, 10%);
+      padding: 10px;
+    }
+    .twitterbutton {
+      text-align: center;
+    }
 }
 
 article a {
   border-bottom: 1px dotted $theme-color;
-
+  
   &:hover {
     color: $theme-color;
     background-color: lighten($theme-color, 50%);
@@ -291,7 +291,15 @@ article a {
 /********************/
 
 footer {
-  margin-top: 20px;
+  position: relative;
+  top: -3px;
+  height: 300px;
+  background: #ccc;
+}
+
+#footercontent {
+  width: $site-width;
+  margin: 0 auto;
 }
 
 a {
