Blog archive view.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,12 @@
 
 <footer>
 <div id="footercontent">
-  <p><small>&copy; Copyright Steve Jackson 2011. All Rights Reserved.</small></p>
+  <div class="col1">
+    
+</div>
+<div class="col2">
+  <p><small>Design and content by Steve Jackson. Want to check out the code to this site? <a href="http://github.com/stevejackson/sjackson.net">Go for it.</a></small></p>
+</div>
 </div>
 </footer>
 
