--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
         <link rel="stylesheet" href="/css/htmlreset.css">
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css">
 	
 	<script src="/js/modernizr-1.7.min.js"></script>
         <script type="text/javascript" src="http://use.typekit.com/nnc7pcl.js"></script>
@@ -75,7 +76,7 @@
 			<ul class='navsub'>
 				<li><div class="navitem"><a href="/index.html">Home</a></div></li>
 				<li><div class="navitem"><a href="/blog.html">Blog</a></div></li>
-				<li><div class="navitem"><a href="/portfolio.html">Portfolio</a></div></li>
+				<li><div class="navitem"><a href="/projects.html">Projects</a></div></li>
 				<li><div class="navitem"><a href="/about.html">About</a></div></li>
 			</ul>
 		</div>	
@@ -104,6 +105,17 @@
 <script src="/js/jquery.kwicks.js"></script>
 <script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" type="text/javascript"></script>
 <script src="/js/functions.js" type="text/javascript"></script>
+<script src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+
+<script>
+
+  $(document).ready(function() {
+    $("a.fb").fancybox({
+      'titlePosition': 'inside',
+    });
+  });
+
+</script>
 
 <!-- Asynchronous google analytics; this is the official snippet.
 	 Replace UA-XXXXXX-XX with your site's ID and uncomment to enable.
