--- a/css/layout.css
+++ b/css/layout.css
@@ -222,6 +222,30 @@ article a {
     border-bottom: 1px solid #cd0a0a;
     text-decoration: none; }
 
+/********************
+ * Projects page
+ */
+.projects {
+  margin-top: 30px;
+  width: 735px; }
+  .projects .project {
+    margin-right: 15px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ccc; }
+    .projects .project .image {
+      float: left;
+      width: 250px; }
+    .projects .project .description {
+      float: left;
+      width: 385px;
+      padding-left: 15px; }
+    .projects .project h1 {
+      padding-bottom: 10px;
+      font-size: 20px;
+      font-weight: 700; }
+    .projects .project .tech {
+      font-style: italic; }
+
 /********************/
 footer {
   clear: both;
