--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,6 @@
 body {
   background-repeat: repeat-x repeat-y;
-  background: #fafafa;
+  background: #f4f4f4;
   font-family: proxima-nova, sans-serif; }
 
 p {
@@ -206,7 +206,8 @@ h1 a {
 .right-column {
   float: left;
   width: 250px;
-  margin-top: 30px; }
+  margin-top: 30px;
+  margin-bottom: 30px; }
   .right-column #tweet {
     background: #f5f5f5;
     border: 3px solid #dcdcdc;
@@ -245,6 +246,19 @@ article a {
       font-weight: 700; }
     .projects .project .tech {
       font-style: italic; }
+
+/** about page ******/
+.left-column-about {
+  float: left;
+  width: 715px;
+  padding-right: 20px;
+  margin-top: 30px; }
+  .left-column-about img {
+    float: right;
+    margin: 0 20px 0 20px; }
+  .left-column-about em {
+    font-weight: bold;
+    font-style: normal; }
 
 /********************/
 footer {
