--- a/css/layout.scss
+++ b/css/layout.scss
@@ -7,7 +7,7 @@ $footer-height: 200px;
 body {
   //  background-image: url('/img/bg3.png');
   background-repeat: repeat-x repeat-y;
-  background: #fafafa;
+  background: #f4f4f4;
   //background: #fcfcfc;
   font-family: proxima-nova, sans-serif;
 }
@@ -274,6 +274,7 @@ h1 a {
   float: left;
   width: 250px;
   margin-top: 30px;
+  margin-bottom: 30px;
 
   #tweet {
     background: #f5f5f5;
@@ -333,6 +334,24 @@ article a {
   }
 }
 
+/** about page ******/
+
+.left-column-about {
+  float: left;
+  width: $site-width - 270px;
+  padding-right: 20px;
+  margin-top: 30px;
+
+  img {
+    float: right;
+    margin: 0 20px 0 20px;
+  }
+
+  em {
+    font-weight: bold;
+    font-style: normal;
+  }
+}
 
 /********************/
 
