--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,139 +1,65 @@
-<!doctype html>
-
-<!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="en"> <![endif]-->
-<!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
-<!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
-<!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
-<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
-<!-- the "no-js" class is for Modernizr. -->
-
-<head id="www-sjackson-net" data-template-set="html5-reset">
-
-	<meta charset="utf-8">
-	
-	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	
-	<title>{{ page.title }}</title>
-	
-	<meta name="title" content="">
-	<meta name="description" content="">
-	<meta name="google-site-verification" content="">
-	<!-- Speaking of Google, don't forget to set your site up: http://google.com/webmasters -->
-	
-	<meta name="author" content="Steve Jackson">
-	<meta name="Copyright" content="Copyright Steve Jackson 2011. All Rights Reserved.">
-
-	<!-- Dublin Core Metadata : http://dublincore.org/ -->
-	<meta name="DC.title" content="Project Name">
-	<meta name="DC.subject" content="What you're about.">
-	<meta name="DC.creator" content="Who made this site.">
-	
-        <link rel="stylesheet" href="/css/htmlreset.css">
-        <link rel="stylesheet" href="/css/layout.css">
-        <link rel="stylesheet" href="/css/syntax.css">
-        <link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css">
-	
-	<script src="/js/modernizr-1.7.min.js"></script>
-        <script type="text/javascript" src="http://use.typekit.com/nnc7pcl.js"></script>
-        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-</head>
-
+---
+layout: meta
+---
 <body>
 
-<div id="top-bar"></div>
+  <div id="top-bar"></div>
 
-<div id="wrapper">
+  <div id="wrapper">
 
-	<header>
-		
-		<div class="left-split">
-			<div id="boxcontainer">
-                          <a href="/index.html"><div id="box">
-				<span>sjj</span>
-                            </div></a>
-			</div>
-		</div>
+    <header>
 
-		<div class="right-split">
-			<h1><a href="">Steve Jackson</a></h1>
-			<span>Ruby, Rails, Vim, and various other musings</span>
+      <div class="left-split">
+        <div id="boxcontainer">
+          <a href="/index.html"><div id="box">
+              <span>sjj</span>
+          </div></a>
+        </div>
+      </div>
 
-                    <div class="icons">
-                      <ul>
-                        <li><div class="iconcontainer"><a class="github" href="http://www.github.com/stevejackson"></a></div></li>
-                        <li><div class="iconcontainer"><a class="linkedin" href="http://www.linkedin.com/in/sjackson7"></a></div></li>
-                        <li><div class="iconcontainer"><a class="googleplus" href="https://profiles.google.com/114700593139486212398"></a></div></li>
-                        <li><div class="iconcontainer"><a class="twitter" href="http://www.twitter.com/_sjackson"></a></div></li>
-                      </ul>
-                    </div>
+      <div class="right-split">
+        <h1><a href="">Steve Jackson</a></h1>
+        <span>Ruby, Rails, Vim, and various other musings</span>
 
-		</div>
+        <div class="icons">
+          <ul>
+            <li><div class="iconcontainer"><a class="github" href="http://www.github.com/stevejackson"></a></div></li>
+            <li><div class="iconcontainer"><a class="linkedin" href="http://www.linkedin.com/in/sjackson7"></a></div></li>
+            <li><div class="iconcontainer"><a class="googleplus" href="https://profiles.google.com/114700593139486212398"></a></div></li>
+            <li><div class="iconcontainer"><a class="twitter" href="http://www.twitter.com/_sjackson"></a></div></li>
+          </ul>
+        </div>
 
-		<div class="clear"></div>
+      </div>
 
-		<div class="navwrap">	
-			<ul class='navsub'>
-				<li><div class="navitem"><a href="/index.html">Home</a></div></li>
-				<li><div class="navitem"><a href="/blog.html">Blog</a></div></li>
-				<li><div class="navitem"><a href="/projects.html">Projects</a></div></li>
-				<li><div class="navitem"><a href="/about.html">About</a></div></li>
-			</ul>
-		</div>	
-	</header>
+      <div class="clear"></div>
 
-	<section id='content'>
-	
-		{{ content }}
-		
-	</section>
+      <div class="navwrap">	
+        <ul class='navsub'>
+          <li><div class="navitem"><a href="/index.html">Home</a></div></li>
+          <li><div class="navitem"><a href="/blog.html">Blog</a></div></li>
+          <li><div class="navitem"><a href="/projects.html">Projects</a></div></li>
+          <li><div class="navitem"><a href="/about.html">About</a></div></li>
+        </ul>
+      </div>	
+    </header>
+
+    <section id='content'>
+
+      {{ content }}
+
+    </section>
+  </div>
+
+
+  <footer>
+    <div id="footercontent">
+      <div class="col1">
+
+      </div>
+      <div class="col2">
+        <p><small>Design and content by Steve Jackson. Want to check out the code to this site? <a href="http://github.com/stevejackson/sjackson.net">Go for it.</a></small></p>
+      </div>
+    </div>
+  </footer>
 </div>
-
-
-<footer>
-<div id="footercontent">
-  <div class="col1">
-    
-</div>
-<div class="col2">
-  <p><small>Design and content by Steve Jackson. Want to check out the code to this site? <a href="http://github.com/stevejackson/sjackson.net">Go for it.</a></small></p>
-</div>
-</div>
-</footer>
-
-<script src="/js/jquery-1.5.1.min.js"></script>
-<script src="/js/jquery.kwicks.js"></script>
-<script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" type="text/javascript"></script>
-<script src="/js/functions.js" type="text/javascript"></script>
-<script src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-
-<script>
-
-  $(document).ready(function() {
-    $("a.fb").fancybox({
-      'titlePosition': 'inside',
-    });
-  });
-
-</script>
-
-<!-- Asynchronous google analytics; this is the official snippet.
-	 Replace UA-XXXXXX-XX with your site's ID and uncomment to enable.
-	 
-<script>
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-XXXXXX-XX']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
--->
-  
-</body>
-</html>
