--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,17 @@
 body {
-  background-repeat: repeat-x repeat-y;
   background: #f4f4f4;
   font-family: proxima-nova, sans-serif; }
+
+body#landing {
+  background: #434343; }
+
+#landing-upper {
+  float: left;
+  position: absolute;
+  background: #e7e7e7;
+  height: 350px;
+  width: 100%;
+  border-bottom: 4px solid #767676; }
 
 p {
   -webkit-margin-before: 1em;
@@ -281,6 +291,24 @@ footer {
   width: 985px;
   padding-top: 30px;
   margin: 0 auto; }
+
+.landing {
+  background: #434343; }
+  .landing .landing-top {
+    background: #e7e7e7;
+    width: 100%;
+    height: 350px; }
+  .landing #landing-box {
+    width: 100%;
+    position: absolute;
+    top: 220px;
+    left: 0;
+    background: #434343;
+    min-height: 130px;
+    border-left: 4px solid #767676;
+    border-right: 4px solid #767676;
+    border-top: 4px solid #767676;
+    padding: 20px; }
 
 a {
   color: #cd0a0a;
